acvm-repo/msgpack_tagged/tests/compile_fail/allow_unknown_on_struct.stderr
error: `#[tagged(allow_unknown)]` only applies to enums — products skip or error on unknown field tags via `allow_unknown_tags` instead
  --> tests/compile_fail/allow_unknown_on_struct.rs:9:1
   |
9  | / #[tagged(allow_unknown)]
10 | | struct NotAnEnum {
11 | |     #[tag(0)]
12 | |     payload: u32,
13 | | }
   | |_^
